# msc-ort-tesis

./: .gitignore  README.md  commands.ps1
notebooks/llama-index-property-graph-testing/: basic-example.py  requirements.txt
services/graph_generation/: pyproject.toml
services/graph_generation/src/: config.py  main.py
services/question_generation/: pyproject.toml
